--- a/main.bib
+++ b/main.bib
@@ -930,3 +930,42 @@ terms= {}
 }
 
  @article{Lee_Zhang_Fischer_Bengio_2015, title={Difference Target Propagation}, url={http://arxiv.org/abs/1412.7525}, abstractNote={Back-propagation has been the workhorse of recent successes of deep learning but it relies on infinitesimal effects (partial derivatives) in order to perform credit assignment. This could become a serious issue as one considers deeper and more non-linear functions, e.g., consider the extreme case of nonlinearity where the relation between parameters and cost is actually discrete. Inspired by the biological implausibility of back-propagation, a few approaches have been proposed in the past that could play a similar credit assignment role. In this spirit, we explore a novel approach to credit assignment in deep networks that we call target propagation. The main idea is to compute targets rather than gradients, at each layer. Like gradients, they are propagated backwards. In a way that is related but different from previously proposed proxies for back-propagation which rely on a backwards network with symmetric weights, target propagation relies on auto-encoders at each layer. Unlike back-propagation, it can be applied even when units exchange stochastic bits rather than real numbers. We show that a linear correction for the imperfectness of the auto-encoders, called difference target propagation, is very effective to make target propagation actually work, leading to results comparable to back-propagation for deep networks with discrete and continuous units and denoising auto-encoders and achieving state of the art for stochastic networks.}, note={arXiv:1412.7525 [cs]}, number={arXiv:1412.7525}, publisher={arXiv}, author={Lee, Dong-Hyun and Zhang, Saizheng and Fischer, Asja and Bengio, Yoshua}, year={2015}, month={Nov} }
+ 
+@article{randazzo2020self_classifying,
+  author = {Randazzo, Ettore and Mordvintsev, Alexander and Niklasson, Eyvind and Levin, Michael and Greydanus, Sam},
+  title = {Self-classifying MNIST Digits},
+  journal = {Distill},
+  year = {2020},
+  note = {https://distill.pub/2020/selforg/mnist},
+  doi = {10.23915/distill.00027.002}
+}
+
+ @article{Zhang_Itoh_Tanida_Ichioka_1990, title={Parallel distributed processing model with local space-invariant interconnections and its optical architecture}, volume={29}, ISSN={0003-6935, 1539-4522}, DOI={10.1364/AO.29.004790}, number={32}, journal={Applied Optics}, author={Zhang, Wei and Itoh, Kazuyoshi and Tanida, Jun and Ichioka, Yoshiki}, year={1990}, month={Nov}, pages={4790}, language={en} }
+
+ @inbook{Mouton_Myburgh_Davel_2020, title={Stride and Translation Invariance in CNNs}, volume={1342}, url={http://arxiv.org/abs/2103.10097}, DOI={10.1007/978-3-030-66151-9_17}, abstractNote={Convolutional Neural Networks have become the standard for image classification tasks, however, these architectures are not invariant to translations of the input image. This lack of invariance is attributed to the use of stride which ignores the sampling theorem, and fully connected layers which lack spatial reasoning. We show that stride can greatly benefit translation invariance given that it is combined with sufficient similarity between neighbouring pixels, a characteristic which we refer to as local homogeneity. We also observe that this characteristic is dataset-specific and dictates the relationship between pooling kernel size and stride required for translation invariance. Furthermore we find that a trade-off exists between generalization and translation invariance in the case of pooling kernel size, as larger kernel sizes lead to better invariance but poorer generalization. Finally we explore the efficacy of other solutions proposed, namely global average pooling, anti-aliasing, and data augmentation, both empirically and through the lens of local homogeneity.}, note={arXiv:2103.10097 [cs]}, author={Mouton, Coenraad and Myburgh, Johannes C. and Davel, Marelie H.}, year={2020}, pages={267–281} }
+ 
+  @article{Ioffe_Szegedy_2015, title={Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift}, url={http://arxiv.org/abs/1502.03167}, abstractNote={Training Deep Neural Networks is complicated by the fact that the distribution of each layer’s inputs changes during training, as the parameters of the previous layers change. This slows down the training by requiring lower learning rates and careful parameter initialization, and makes it notoriously hard to train models with saturating nonlinearities. We refer to this phenomenon as internal covariate shift, and address the problem by normalizing layer inputs. Our method draws its strength from making normalization a part of the model architecture and performing the normalization for each training mini-batch. Batch Normalization allows us to use much higher learning rates and be less careful about initialization. It also acts as a regularizer, in some cases eliminating the need for Dropout. Applied to a state-of-the-art image classification model, Batch Normalization achieves the same accuracy with 14 times fewer training steps, and beats the original model by a significant margin. Using an ensemble of batch-normalized networks, we improve upon the best published result on ImageNet classification: reaching 4.9% top-5 validation error (and 4.8% test error), exceeding the accuracy of human raters.}, note={arXiv:1502.03167 [cs]}, number={arXiv:1502.03167}, publisher={arXiv}, author={Ioffe, Sergey and Szegedy, Christian}, year={2015}, month={Mar} }
+
+ @article{Lecun_Bottou_Bengio_Haffner_1998, title={Gradient-based learning applied to document recognition}, volume={86}, ISSN={00189219}, DOI={10.1109/5.726791}, number={11}, journal={Proceedings of the IEEE}, author={Lecun, Y. and Bottou, L. and Bengio, Y. and Haffner, P.}, year={1998}, month={Nov}, pages={2278–2324} }
+
+@inproceedings{NIPS2012_c399862d,
+ author = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {F. Pereira and C.J. Burges and L. Bottou and K.Q. Weinberger},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {ImageNet Classification with Deep Convolutional Neural Networks},
+ url = {https://proceedings.neurips.cc/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf},
+ volume = {25},
+ year = {2012}
+}
+
+ @article{Simonyan_Zisserman_2015, title={Very Deep Convolutional Networks for Large-Scale Image Recognition}, url={http://arxiv.org/abs/1409.1556}, abstractNote={In this work we investigate the effect of the convolutional network depth on its accuracy in the large-scale image recognition setting. Our main contribution is a thorough evaluation of networks of increasing depth using an architecture with very small (3x3) convolution filters, which shows that a significant improvement on the prior-art configurations can be achieved by pushing the depth to 16-19 weight layers. These findings were the basis of our ImageNet Challenge 2014 submission, where our team secured the first and the second places in the localisation and classification tracks respectively. We also show that our representations generalise well to other datasets, where they achieve state-of-the-art results. We have made our two best-performing ConvNet models publicly available to facilitate further research on the use of deep visual representations in computer vision.}, note={arXiv:1409.1556 [cs]}, number={arXiv:1409.1556}, publisher={arXiv}, author={Simonyan, Karen and Zisserman, Andrew}, year={2015}, month={Apr} }
+
+ @article{Szegedy_Liu_Jia_Sermanet_Reed_Anguelov_Erhan_Vanhoucke_Rabinovich_2014, title={Going Deeper with Convolutions}, url={http://arxiv.org/abs/1409.4842}, abstractNote={We propose a deep convolutional neural network architecture codenamed “Inception”, which was responsible for setting the new state of the art for classification and detection in the ImageNet Large-Scale Visual Recognition Challenge 2014 (ILSVRC 2014). The main hallmark of this architecture is the improved utilization of the computing resources inside the network. This was achieved by a carefully crafted design that allows for increasing the depth and width of the network while keeping the computational budget constant. To optimize quality, the architectural decisions were based on the Hebbian principle and the intuition of multi-scale processing. One particular incarnation used in our submission for ILSVRC 2014 is called GoogLeNet, a 22 layers deep network, the quality of which is assessed in the context of classification and detection.}, note={arXiv:1409.4842 [cs]}, number={arXiv:1409.4842}, publisher={arXiv}, author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew}, year={2014}, month={Sep} }
+
+ @inproceedings{He_Zhang_Ren_Sun_2016, address={Las Vegas, NV, USA}, title={Deep Residual Learning for Image Recognition}, ISBN={978-1-4673-8851-1}, url={http://ieeexplore.ieee.org/document/7780459/}, DOI={10.1109/CVPR.2016.90}, booktitle={2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, publisher={IEEE}, author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian}, year={2016}, month={Jun}, pages={770–778} }
+
+ @article{Ronneberger_Fischer_Brox_2015, title={U-Net: Convolutional Networks for Biomedical Image Segmentation}, url={http://arxiv.org/abs/1505.04597}, abstractNote={There is large consent that successful training of deep networks requires many thousand annotated training samples. In this paper, we present a network and training strategy that relies on the strong use of data augmentation to use the available annotated samples more efficiently. The architecture consists of a contracting path to capture context and a symmetric expanding path that enables precise localization. We show that such a network can be trained end-to-end from very few images and outperforms the prior best method (a sliding-window convolutional network) on the ISBI challenge for segmentation of neuronal structures in electron microscopic stacks. Using the same network trained on transmitted light microscopy images (phase contrast and DIC) we won the ISBI cell tracking challenge 2015 in these categories by a large margin. Moreover, the network is fast. Segmentation of a 512x512 image takes less than a second on a recent GPU. The full implementation (based on Caffe) and the trained networks are available at http://lmb.informatik.uni-freiburg.de/people/ronneber/u-net .}, note={arXiv: 1505.04597}, journal={arXiv:1505.04597 [cs]}, author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas}, year={2015}, month={May} }
+
+ @article{Redmon_Divvala_Girshick_Farhadi_2016, title={You Only Look Once: Unified, Real-Time Object Detection}, url={http://arxiv.org/abs/1506.02640}, abstractNote={We present YOLO, a new approach to object detection. Prior work on object detection repurposes classifiers to perform detection. Instead, we frame object detection as a regression problem to spatially separated bounding boxes and associated class probabilities. A single neural network predicts bounding boxes and class probabilities directly from full images in one evaluation. Since the whole detection pipeline is a single network, it can be optimized end-to-end directly on detection performance. Our unified architecture is extremely fast. Our base YOLO model processes images in real-time at 45 frames per second. A smaller version of the network, Fast YOLO, processes an astounding 155 frames per second while still achieving double the mAP of other real-time detectors. Compared to state-of-the-art detection systems, YOLO makes more localization errors but is far less likely to predict false detections where nothing exists. Finally, YOLO learns very general representations of objects. It outperforms all other detection methods, including DPM and R-CNN, by a wide margin when generalizing from natural images to artwork on both the Picasso Dataset and the People-Art Dataset.}, note={arXiv:1506.02640 [cs]}, number={arXiv:1506.02640}, publisher={arXiv}, author={Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali}, year={2016}, month={May} }
