--- a/main.bib
+++ b/main.bib
@@ -969,3 +969,47 @@ terms= {}
  @article{Ronneberger_Fischer_Brox_2015, title={U-Net: Convolutional Networks for Biomedical Image Segmentation}, url={http://arxiv.org/abs/1505.04597}, abstractNote={There is large consent that successful training of deep networks requires many thousand annotated training samples. In this paper, we present a network and training strategy that relies on the strong use of data augmentation to use the available annotated samples more efficiently. The architecture consists of a contracting path to capture context and a symmetric expanding path that enables precise localization. We show that such a network can be trained end-to-end from very few images and outperforms the prior best method (a sliding-window convolutional network) on the ISBI challenge for segmentation of neuronal structures in electron microscopic stacks. Using the same network trained on transmitted light microscopy images (phase contrast and DIC) we won the ISBI cell tracking challenge 2015 in these categories by a large margin. Moreover, the network is fast. Segmentation of a 512x512 image takes less than a second on a recent GPU. The full implementation (based on Caffe) and the trained networks are available at http://lmb.informatik.uni-freiburg.de/people/ronneber/u-net .}, note={arXiv: 1505.04597}, journal={arXiv:1505.04597 [cs]}, author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas}, year={2015}, month={May} }
 
  @article{Redmon_Divvala_Girshick_Farhadi_2016, title={You Only Look Once: Unified, Real-Time Object Detection}, url={http://arxiv.org/abs/1506.02640}, abstractNote={We present YOLO, a new approach to object detection. Prior work on object detection repurposes classifiers to perform detection. Instead, we frame object detection as a regression problem to spatially separated bounding boxes and associated class probabilities. A single neural network predicts bounding boxes and class probabilities directly from full images in one evaluation. Since the whole detection pipeline is a single network, it can be optimized end-to-end directly on detection performance. Our unified architecture is extremely fast. Our base YOLO model processes images in real-time at 45 frames per second. A smaller version of the network, Fast YOLO, processes an astounding 155 frames per second while still achieving double the mAP of other real-time detectors. Compared to state-of-the-art detection systems, YOLO makes more localization errors but is far less likely to predict false detections where nothing exists. Finally, YOLO learns very general representations of objects. It outperforms all other detection methods, including DPM and R-CNN, by a wide margin when generalizing from natural images to artwork on both the Picasso Dataset and the People-Art Dataset.}, note={arXiv:1506.02640 [cs]}, number={arXiv:1506.02640}, publisher={arXiv}, author={Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali}, year={2016}, month={May} }
+
+@inproceedings{gilbert1990lateral,
+  title={Lateral interactions in visual cortex},
+  author={Gilbert, Charles D and Hirsch, Joseph A and Wiesel, Torsten N},
+  booktitle={Cold Spring Harbor symposia on quantitative biology},
+  volume={55},
+  pages={663--677},
+  year={1990},
+  organization={Cold Spring Harbor Laboratory Press}
+}
+
+ @article{Rochefort_Garaschuk_Milos_Narushima_Marandi_Pichler_Kovalchuk_Konnerth_2009, title={Sparsification of neuronal activity in the visual cortex at eye-opening}, volume={106}, ISSN={0027-8424, 1091-6490}, DOI={10.1073/pnas.0907660106}, abstractNote={Eye-opening represents a turning point in the function of the visual cortex. Before eye-opening, the visual cortex is largely devoid of sensory inputs and neuronal activities are generated intrinsically. After eye-opening, the cortex starts to integrate visual information. Here we used in vivo two-photon calcium imaging to explore the developmental changes of the mouse visual cortex by analyzing the ongoing spontaneous activity. We found that before eye-opening, the activity of layer 2/3 neurons consists predominantly of slow wave oscillations. These waves were first detected at postnatal day 8 (P8). Their initial very low frequency (0.01 Hz) gradually increased during development to ≈0.5 Hz in adults. Before eye-opening, a large fraction of neurons (>75%) was active during each wave. One day after eye-opening, this dense mode of recruitment changed to a sparse mode with only 36% of active neurons per wave. This was followed by a progressive decrease during the following weeks, reaching 12% of active neurons per wave in adults. The possible role of visual experience for this process of sparsification was investigated by analyzing dark-reared mice. We found that sparsification also occurred in these mice, but that the switch from a dense to a sparse activity pattern was delayed by 3–4 days as compared with normally-reared mice. These results reveal a modulatory contribution of visual experience during the first days after eye-opening, but an overall dominating role of intrinsic factors. We propose that the transformation in network activity from dense to sparse is a prerequisite for the changed cortical function at eye-opening.}, number={35}, journal={Proceedings of the National Academy of Sciences}, author={Rochefort, Nathalie L. and Garaschuk, Olga and Milos, Ruxandra-Iulia and Narushima, Madoka and Marandi, Nima and Pichler, Bruno and Kovalchuk, Yury and Konnerth, Arthur}, year={2009}, month={Sep}, pages={15049–15054}, language={en} }
+
+ @article{Louizos_Welling_Kingma_2018, title={Learning Sparse Neural Networks through $L_0$ Regularization}, url={http://arxiv.org/abs/1712.01312}, abstractNote={We propose a practical method for $L_0$ norm regularization for neural networks: pruning the network during training by encouraging weights to become exactly zero. Such regularization is interesting since (1) it can greatly speed up training and inference, and (2) it can improve generalization. AIC and BIC, well-known model selection criteria, are special cases of $L_0$ regularization. However, since the $L_0$ norm of weights is non-differentiable, we cannot incorporate it directly as a regularization term in the objective function. We propose a solution through the inclusion of a collection of non-negative stochastic gates, which collectively determine which weights to set to zero. We show that, somewhat surprisingly, for certain distributions over the gates, the expected $L_0$ norm of the resulting gated weights is differentiable with respect to the distribution parameters. We further propose the emph{hard concrete} distribution for the gates, which is obtained by “stretching” a binary concrete distribution and then transforming its samples with a hard-sigmoid. The parameters of the distribution over the gates can then be jointly optimized with the original network parameters. As a result our method allows for straightforward and efficient learning of model structures with stochastic gradient descent and allows for conditional computation in a principled way. We perform various experiments to demonstrate the effectiveness of the resulting approach and regularizer.}, note={arXiv:1712.01312 [cs, stat]}, number={arXiv:1712.01312}, publisher={arXiv}, author={Louizos, Christos and Welling, Max and Kingma, Diederik P.}, year={2018}, month={Jun} }
+ 
+ @article{Hoefler_Alistarh_Ben-Nun_Dryden_Peste_2021, title={Sparsity in Deep Learning: Pruning and growth for efficient inference and training in neural networks}, url={http://arxiv.org/abs/2102.00554}, abstractNote={The growing energy and performance costs of deep learning have driven the community to reduce the size of neural networks by selectively pruning components. Similarly to their biological counterparts, sparse networks generalize just as well, if not better than, the original dense networks. Sparsity can reduce the memory footprint of regular networks to fit mobile devices, as well as shorten training time for ever growing networks. In this paper, we survey prior work on sparsity in deep learning and provide an extensive tutorial of sparsification for both inference and training. We describe approaches to remove and add elements of neural networks, different training strategies to achieve model sparsity, and mechanisms to exploit sparsity in practice. Our work distills ideas from more than 300 research papers and provides guidance to practitioners who wish to utilize sparsity today, as well as to researchers whose goal is to push the frontier forward. We include the necessary background on mathematical methods in sparsification, describe phenomena such as early structure adaptation, the intricate relations between sparsity and the training process, and show techniques for achieving acceleration on real hardware. We also define a metric of pruned parameter efficiency that could serve as a baseline for comparison of different sparse networks. We close by speculating on how sparsity can improve future workloads and outline major open problems in the field.}, note={arXiv:2102.00554 [cs]}, number={arXiv:2102.00554}, publisher={arXiv}, author={Hoefler, Torsten and Alistarh, Dan and Ben-Nun, Tal and Dryden, Nikoli and Peste, Alexandra}, year={2021}, month={Jan} }
+
+ @article{Panousis_Chatzis_Theodoridis_2021, title={Stochastic Local Winner-Takes-All Networks Enable Profound Adversarial Robustness}, url={http://arxiv.org/abs/2112.02671}, abstractNote={This work explores the potency of stochastic competition-based activations, namely Stochastic Local Winner-Takes-All (LWTA), against powerful (gradient-based) white-box and black-box adversarial attacks; we especially focus on Adversarial Training settings. In our work, we replace the conventional ReLU-based nonlinearities with blocks comprising locally and stochastically competing linear units. The output of each network layer now yields a sparse output, depending on the outcome of winner sampling in each block. We rely on the Variational Bayesian framework for training and inference; we incorporate conventional PGD-based adversarial training arguments to increase the overall adversarial robustness. As we experimentally show, the arising networks yield state-of-the-art robustness against powerful adversarial attacks while retaining very high classification rate in the benign case.}, note={arXiv:2112.02671 [cs, stat]}, number={arXiv:2112.02671}, publisher={arXiv}, author={Panousis, Konstantinos P. and Chatzis, Sotirios and Theodoridis, Sergios}, year={2021}, month={Dec} }
+
+@inproceedings{chen2020simple,
+  title={A simple framework for contrastive learning of visual representations},
+  author={Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
+  booktitle={International conference on machine learning},
+  pages={1597--1607},
+  year={2020},
+  organization={PMLR}
+}
+
+@article{chen2020big,
+  title={Big self-supervised models are strong semi-supervised learners},
+  author={Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey E},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={22243--22255},
+  year={2020}
+}
+@article{caron2020unsupervised,
+  title={Unsupervised learning of visual features by contrasting cluster assignments},
+  author={Caron, Mathilde and Misra, Ishan and Mairal, Julien and Goyal, Priya and Bojanowski, Piotr and Joulin, Armand},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={9912--9924},
+  year={2020}
+}
