--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -130,6 +130,39 @@ However, some concepts are identical in both fields.
 For example, there are excitatory or inhibitory signals or neural plasticity in biological and artificial neurons.
 Consequently, these terms are not distinguished.
 
+In addition to these well-defined terms, there are various biological principles observed in the field of Neuroscience that are either not completely understood or it is unclear how they can be incorporated into artificial networks.
+The concepts relevant for this thesis are discussed in the following.
+However, due to the aforementioned challenges, no definition of these principles is given but rather my own interpretation in the context of this work.
+
+In addition to forward connections, lateral connections are also located in visual cortex \sidecite{gilbert1990lateral}.
+Thus, the biological neurons are not only connected to the neurons in the subsequent layer but also within the same layer.
+TODO: Je nach Umsetzung erklären, wie lateral connections in ANN interpretiert werden (+ Zeichnung einfügen)
+
+Another principle that seems important in biological neural networks is sparsity.
+Over time, the number of active neurons in the visual cortex decreases.
+For example, in the visual cortex of mice are more than 75\% of the neurons active before the first opening of the eyes, 36\% after the opening of the eyes and only 12\% in adulthood \sidecite{Rochefort_Garaschuk_Milos_Narushima_Marandi_Pichler_Kovalchuk_Konnerth_2009}.
+Thus, a sparsification of neuronal activations takes place through visual experience.
+In the field of Deep Learning, sparisty is often interpreted in two different forms; sparse weight matrices and sparse activation matrices.
+Sparse weight matrices are often chosen to make models smaller or to increase inference speed \cite{Louizos_Welling_Kingma_2018, Nun_Dryden_Peste_2021}.
+From a biological point of view, this process of first creating a large network and then shrinking it is obviously not plausible\sidenote{otherwise we would have a large brain at the beginning, which becomes smaller by factors in the course of time}.
+Sparse activations, on the other hand, can increase robustness \cite{Panousis_Chatzis_Theodoridis_2021}.
+Intuitively, sparse activations enforce that only the most relevant information is passed to the subsequent layer.
+TODO: Umsetzung Sprase Activations beschreiben
+
+A biological intelligent organism has an embodiment and can interact with the world.
+At the same time, the visual system perceives continuous input all the time (except when sleeping or blinking).
+As a result, the visual signal changes only minimally from one perceived frame to the next over a long course of time.
+An ANN, on the other hand, is typically trained on samples that have little relation to each other.
+When the system is trained on images, each frame is different; with videos, each sequence of frames is different.
+A continuous input might help to get better representation of objects through self-supervised learning.
+If an input is continuous and shows the same object from different angles or in different transformations (e.g. stretching) and it can be inferred that it is the same object then the object representations derived from this continuous stream can be homogenized.
+These principles are already applied to some extent by self-supervised learning systems for computer vision.
+In contrastive learning, a popular form of self-supervised learning, two different views are derived from one image by data augmentation, and their representations are then pushed closed together in the feature space \sidecite{chen2020simple, chen2020big, caron2020unsupervised}.
+However, this paradigm is still quite limited since only two views of the same scene and not the continuous transformation of an object are presented to the learning system.
+TODO: Umsetzung beschreiben
+
+
+
 \subsection{Organization of Thesis}\seclbl{org_thesis}
 The remainder of the thesis is organized as follows: In chapter \chref*{fundamentals} we present the fundamentals necessary to understand this thesis. We provide an overview about how deep learning works and what the most common research areas in neurocomputing are. Chapter \chref*{rel_work} presents the work related to this thesis.
 
