add chapter contribution

--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -26,7 +26,7 @@ He divides the process in seven steps;
 TODO: Write more about Paper from Grewe \sidecite{Keurti_Pan_Besserve_Grewe_Schölkopf_2022}
 
 
-
+TODO: Stand jetzt sind es eher neue Module wie lateral connections -> gute Repräsentationen benötigen aber neue Architekturen, z.B. eine Hierarchie (Tiere -> Säugetiere, Reptilien, -> ...) und eine Menge an Actions, die jedes Element in der Hierarchie ausführen kann (z.B. drehen kann jedes Tier, Gehen nur die Landtiere und Schreiben nur der Mensch) -> Schreibe konkrete Vorschläge für Folgearbeiten!
 
 
 
