--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -178,7 +178,8 @@ In contrastive learning, a popular form of self-supervised learning, two differe
 However, this paradigm is still quite limited since only two views of the same scene and not the continuous transformation of an object are presented to the learning system.
 TODO: Umsetzung beschreiben
 
-
+\subsection{Contribution}
+TODO: Einzelnes Kapitel in dem beschrieben wird, was implementiert wurde, resp. wie dies hilft
 
 \subsection{Organization of Thesis}\seclbl{org_thesis}
 The remainder of the thesis is organized as follows: In chapter \chref*{fundamentals} we present the fundamentals necessary to understand this thesis. We provide an overview about how deep learning works and what the most common research areas in neurocomputing are. Chapter \chref*{rel_work} presents the work related to this thesis.
